assets/css/style-new.css
/* ... */
/* ------------------------- About - Services -------------------------------------------------- */

.about-services {
   padding-top: calc(var(--section-padding) * .75);
   background: var(--color-lightgray);
   margin-top: -1px;
}

.about-services .row:nth-child(1) {
   padding-bottom: calc(var(--section-padding) / 2);
}

.about-services .row:nth-child(2) {
   width: calc(100% + calc(var(--container-padding) / 1.5));
   margin-left: calc(var(--container-padding) / -1.5);
}

.about-services .row:nth-child(2) .flex-col {
   width: 33.333%;
   padding-left: calc(var(--container-padding) / 1.5);
}

.about-services .row:nth-child(2) .flex-col h5:nth-child(1) {
   padding-bottom: 2em;
}

.about-services .row:nth-child(2) .flex-col h5 {
   margin: 0;
   font-size: .8em;
}

.about-services .row:nth-child(2) .flex-col h4 {
   margin: 0;
}

.about-services .row:nth-child(2) .flex-col .stripe {
   margin-bottom: 2em;
}

.about-services .row:nth-child(2) .flex-col svg {
   width: 1em;
   padding: 0;
   margin-right: .25em;
   transform: translate(0, -.05em);
}

.about-services .row:nth-child(2) .flex-col svg path {
   fill: var(--color-dark);
}

.about-services .row:nth-child(2) .flex-col p:nth-child(4) {
   padding-top: 2em;
}

.animate-dot {
   opacity: 0;
   animation: animateDot1 2s linear infinite;
}

.animate-dot:nth-child(2) {
   animation: animateDot2 2s linear infinite;
}

.animate-dot:nth-child(3) {
   animation: animateDot3 2s linear infinite;
}

@keyframes animateDot1 {
   0% {
      opacity: 0;
   }

   20% {
      opacity: 0;
   }

   30% {
      opacity: 1;
   }

   90% {
      opacity: 1;
   }
}

@keyframes animateDot2 {
   0% {
      opacity: 0;
   }

   35% {
      opacity: 0;
   }

   45% {
      opacity: 1;
   }

   90% {
      opacity: 1;
   }
}

@keyframes animateDot3 {
   0% {
      opacity: 0;
   }

   50% {
      opacity: 0;
   }

   60% {
      opacity: 1;
   }

   90% {
      opacity: 1;
   }
}

@media screen and (max-width: 720px) {

   .about-services {
      padding-top: calc(var(--section-padding) * 1);
   }

   .about-services .row:nth-child(2) {
      width: 100%;
      margin-left: 0;
   }

   .about-services .row:nth-child(2) .flex-col h5:nth-child(1) {
      display: none;
   }

   .about-services .row:nth-child(2) .flex-col {
      width: 100%;
      padding-left: 0;
      padding-bottom: calc(var(--section-padding) * .5);
   }

   .about-services .row:nth-child(2) .flex-col:last-child {
      padding-bottom: 0;
   }

   .about-services .row:nth-child(2) .flex-col .stripe {
      margin-bottom: calc(var(--section-padding) * .5);
   }

   .about-services .row:nth-child(2) .flex-col p:nth-child(4) {
      padding-top: calc(var(--gap-padding) * .5);
   }
}


/* ------------------------- About - Split Awwwards -------------------------------------------------- */


.about-awwwards .row {
   align-items: center;
}

.about-awwwards .flex-col:nth-child(1) {
   width: 50%;
   padding-right: calc(var(--container-padding) / 2);
}

.about-awwwards .flex-col:nth-child(2) {
   width: 50%;
   padding-left: calc(var(--container-padding) / 2);
   padding-bottom: 3em;
}

.about-awwwards .single-image {
   width: 100%;
   display: block;
   background: var(--color-lightgray);
   overflow: hidden;
   position: relative;
}

.about-awwwards .single-image::before {
   content: "";
   display: block;
   padding-top: 135%;
   padding-top: 125%;
}

.about-awwwards .single-image .overlay:nth-child(1) {
   /* background: url("../img/DSC07292.jpg") center center no-repeat;
   background-size: cover;
   height: 130%;
   top: -25%;
   width: 105%;
   left: -5%; */

   background: url("../img/Frame 427319044.png") center center no-repeat;
   background-size: cover;
   top: -3%;
   height: 106%;
   width: 140%;
   left: -40%;

   /* background: url("../img/Kien_Team-16.jpg") center center no-repeat;
   background-size: cover;
   top: -3%;
   height: 106%;
   width: 140%;
   left: -14%; */
}

.about-awwwards .single-image .overlay:nth-child(2) {
   background: linear-gradient(to top, hsla(220, 13%, 5%, .075) 0%, hsla(220, 13%, 5%, 0) 50%);
}

.about-awwwards .awwwards-badge {
   width: 6em;
   position: relative;
   margin-bottom: calc(var(--section-padding) / 4);
   border-radius: 50%;
}

.about-awwwards .awwwards-badge::before {
   display: block;
   content: "";
   padding-top: 100%;
}

.about-awwwards .awwwards-badge svg:nth-child(1) {
   width: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
}

.about-awwwards .awwwards-badge svg:nth-child(1) g {
   fill: var(--color-gray);
}

.about-awwwards .awwwards-badge svg:nth-child(2) {
   width: 40%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
}

.about-awwwards .awwwards-badge svg:nth-child(2) path {
   fill: var(--color-gray);
}

@media screen and (max-width: 720px) {

   .about-awwwards {
      padding-top: calc(var(--section-padding) / 1.5);
   }

   .about-awwwards .flex-col:nth-child(1) {
      width: 100%;
      padding-right: 0;
   }

   .about-awwwards .flex-col:nth-child(2) {
      width: 100%;
      padding-left: 0;
      padding-bottom: calc(var(--section-padding) / 2);
      order: 1;
   }

   .about-awwwards .single-image::before {
      padding-top: 125%;
   }

   .about-awwwards .single-image .overlay:nth-child(1) {
      background: url("../img/DSC07079.jpg") center center no-repeat;
      background-size: cover;
      top: -8%;
      height: 110%;
      width: 150%;
      left: -50%;
   }
}


/* ------------------------- FAQ - Section -------------------------------------------------- */


.faq {
   padding-top: 0;
}

.faq .flex-col:nth-child(1) {
   padding: 0 calc(var(--container-padding) / 2);
   padding-bottom: calc(var(--section-padding) / 2);
}

.faq ul {
   width: 100%;
}

.faq li {
   padding: 0 calc(var(--container-padding) / 2);
   border-top: 1px solid var(--color-border);
}
/* ... */

